src/objects/MUSW__License__c.object
<CustomObject>
    <description>Authorization for a person or facility to perform a function for a period of time: business, profession or privilege</description>
    <fields>
        <fullName>IsClosed__c</fullName>
        <formula>IF(OR( MUSW__Expiration_Date__c &lt; TODAY() ),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Iss_Track_No__c</fullName>
        <formula>IF( OR(ISNULL(MUSW__Tracking_Number__c), MUSW__Tracking_Number__c = &quot;&quot;) 
,HYPERLINK(&quot;../&quot;&amp;Id, Name, &quot;_parent&quot;) &amp; &quot; &quot; &amp; HYPERLINK(&quot;/servlet/servlet.Integration?lid=01N460000004mW2&amp;Id=&quot; &amp; Id &amp; 
&quot;&amp;ic=1&amp;object=MUSW__License__c&amp;setIssuanceDate=notnull&amp;issuanceDateField=MUSW__Issued_Date__c&amp;setStatus=Issued&amp;statusField=MUSW__Status__c&amp;type=&quot;&amp; CASE( MUSW__Type__c , 
&quot;Rental&quot;,&quot;RR&quot;,
&quot;DEFAULT&quot; )&amp;&quot;&amp;year=&quot;&amp; TEXT(YEAR(TODAY()))&amp;&quot;&amp;month=&quot;&amp; 
TEXT(MONTH(TODAY()))&amp;&quot;&amp;day=&quot;&amp; TEXT(DAY(TODAY())), &quot;(Issue)&quot;, &quot;_parent&quot;),HYPERLINK( &quot;../&quot;&amp;Id , MUSW__Tracking_Number__c,&quot;_parent&quot; ) &amp; &quot; &quot; &amp; IF(CASE( MUSW__Type__c , 
&quot;Rental&quot;,&quot;RENEW&quot;,
&quot;DEFAULT&quot;) = &quot;RENEW&quot;,HYPERLINK(&quot;/servlet/servlet.Integration?lid=01N460000004mW2&amp;Id=&quot; &amp; Id &amp; 
&quot;&amp;ic=1&amp;object=MUSW__License__c&amp;instruct=RENEWDATEONLY&amp;setIssuanceDate=notnull&amp;issuanceDateField=MUSW__Renewal_Date__c&amp;type=&quot;&amp; CASE( MUSW__Type__c , 
&quot;Rental&quot;,&quot;RR&quot;,
&quot;DEFAULT&quot; ), &quot;(Renew)&quot;, &quot;_parent&quot;),&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Iss. License No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__AlertCode__c</fullName>
        <label>Alert Code</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Alert_Indicator__c</fullName>
        <formula>HYPERLINK(&quot;/apex/musw__TaskAlert?id=&quot;+ Id, IMAGE( 
CASE( MUSW__AlertCode__c, 
0, &quot;/img/samples/light_green.gif&quot;, 
1, &quot;/img/samples/light_yellow.gif&quot;, 
2, &quot;/img/samples/light_red.gif&quot;, 
&quot;/servlet/servlet.ImageServer?oid=&quot;+ $Organization.Id +&quot;&amp;id=01560000000RGSN&quot;), 
&quot;none&quot;), &quot;_top&quot;) + IF(MUSW__Parcel__c != null, &quot; Par: &quot; + HYPERLINK(&quot;/apex/musw__TaskAlert?id=&quot;+  MUSW__Parcel__c, IMAGE( 
CASE( MUSW__Parcel__r.MUSW__AlertCode__c, 
0, &quot;/img/samples/light_green.gif&quot;, 
1, &quot;/img/samples/light_yellow.gif&quot;, 
2, &quot;/img/samples/light_red.gif&quot;, 
&quot;/servlet/servlet.ImageServer?oid=&quot;+ $Organization.Id +&quot;&amp;id=01560000000RGSN&quot;), 
&quot;none&quot;), &quot;_top&quot;),&quot;&quot;)</formula>
        <inlineHelpText>Click to view/add/update your alerts</inlineHelpText>
        <label>Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Applicant_Licensee__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Check if the person applying is also the person licensed. (Licensee will auto fill in after saved.)</inlineHelpText>
        <label>Applicant is Licensee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MUSW__Applicant__c</fullName>
        <inlineHelpText>Person applying for license on behalf of licensee as indicated in Subject</inlineHelpText>
        <label>Applicant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Licenses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MUSW__Class__c</fullName>
        <inlineHelpText>classification or function/business/privilege permitted</inlineHelpText>
        <label>Class</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>MUSW__Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Owner</fullName>
                </value>
                <value>
                    <fullName>Liquor</fullName>
                </value>
                <value>
                    <fullName>Taxi</fullName>
                </value>
                <value>
                    <fullName>Rental</fullName>
                </value>
                <value>
                    <fullName>Operation</fullName>
                </value>
                <value>
                    <fullName>Certification</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Description__c</fullName>
        <label>Description</label>
        <length>12000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MUSW__Designation__c</fullName>
        <inlineHelpText>distinguishing marker, special identifier, or specific permission</inlineHelpText>
        <label>Designation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Potentially Dangerous</fullName>
                </value>
                <value>
                    <fullName>Viscous</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Disposition__c</fullName>
        <inlineHelpText>System Use during batch processing</inlineHelpText>
        <label>Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Pass 1</fullName>
                </value>
                <value>
                    <fullName>Pass 2</fullName>
                </value>
                <value>
                    <fullName>Finish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUSW__Issued_Date__c</fullName>
        <label>Issued Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUSW__Issued_No__c</fullName>
        <description>DO NOT USE</description>
        <label>Issued No. DO NOT USE</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Issued_Number__c</fullName>
        <label>Issued No.</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Latitude__c</fullName>
        <label>Latitude</label>
        <precision>14</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Longitude__c</fullName>
        <label>Longitude</label>
        <precision>14</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Parcel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Parcel</label>
        <referenceTo>MUSW__Parcel__c</referenceTo>
        <relationshipName>Licenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Primary_Licensee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Licensee</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Licenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This license is the main license for the Licensee or this License No. identifies the Licensee</inlineHelpText>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MUSW__Renewal_Date__c</fullName>
        <inlineHelpText>Date License was renewed or extended</inlineHelpText>
        <label>Renewed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUSW__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Issued</fullName>
                </value>
                <value>
                    <fullName>Delinquent</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Total_Due__c</fullName>
        <formula>MUSW__Total_Fees__c - MUSW__Total_Payments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__Total_Fees__c</fullName>
        <label>Total Fees</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__Total_Payments__c</fullName>
        <label>Total Payments</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__Total_Receipts__c</fullName>
        <label>Total Receipts</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__Tracking_Number__c</fullName>
        <externalId>true</externalId>
        <label>License No.</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Type__c</fullName>
        <inlineHelpText>who/what/role being licensed</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Animal</fullName>
                </value>
                <value>
                    <fullName>Landlord</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>License DO NOT USE</label>
    <listViews>
        <fullName>MUSW__All</fullName>
        <columns>NAME</columns>
        <columns>MUSW__Tracking_Number__c</columns>
        <columns>MUSW__Type__c</columns>
        <columns>MUSW__Class__c</columns>
        <columns>MUSW__Status__c</columns>
        <columns>MUSW__Applicant__c</columns>
        <columns>MUSW__Issued_Date__c</columns>
        <columns>MUSW__Renewal_Date__c</columns>
        <columns>MUSW__Expiration_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Licenses DO NOT USE</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>BGBK__Renewal_Requires_Expiration_Date</fullName>
        <active>true</active>
        <description>When entering a renewal date, expiration date must be present</description>
        <errorConditionFormula>AND( MUSW__Renewal_Date__c != null, MUSW__Expiration_Date__c = null)</errorConditionFormula>
        <errorMessage>License must have an expiration end date, before entering a renewed Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MUSW__LicenseeIsRequired</fullName>
        <active>true</active>
        <errorConditionFormula>AND (MUSW__Primary_Licensee__c = null,  MUSW__Applicant_Licensee__c  = false,ISNEW(),$Profile.Name != &apos;CP Profile&apos;)</errorConditionFormula>
        <errorMessage>Licensee is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MUSW__Renewal_Requires_Expiration_Date</fullName>
        <active>true</active>
        <description>Before renewing, a license is first required to be expired</description>
        <errorConditionFormula>AND(NOT(ISNULL(MUSW__Renewal_Date__c)), ISNULL(MUSW__Expiration_Date__c ))</errorConditionFormula>
        <errorMessage>License must be expiring before being renewed. Enter expiration date.</errorMessage>
    </validationRules>
</CustomObject>